--- a/NPM APP/index.html
+++ b/NPM APP/index.html
@@ -1,1 +1,11 @@
-<h1>Hello Npm</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sample NPM</title>
+</head>
+<body>
+    <h1>Hello NPM</h1>
+</body>
+</html>
